--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,7 @@
           <li class="selected"><a href="/">Awesome Blog</a></li>
           <li><a href="/about/">About</a></li>
           <li><a href="/contacts/">Contacts</a></li>
+          <li><a href="/registration/">Registration</a></li>
         </ul>
       </div>
     </div>
