--- a/templates/inc-style.html
+++ b/templates/inc-style.html
@@ -10,7 +10,7 @@
 
     body {
         font: normal .80em 'trebuchet ms', arial, sans-serif;
-        background: #F0EFE2 url(background.png) repeat;
+        background: #F0EFE2 url(img/background.png) repeat;
         color: #000;
     }
 
@@ -179,7 +179,7 @@
 
     ul#menu li a:hover, ul#menu li.selected a, ul#menu li.selected a:hover {
         color: #FFF;
-        background: transparent url(transparent_light.png) repeat;
+        background: transparent url(img/transparent_light.png) repeat;
     }
 
     #site_content {
@@ -210,7 +210,7 @@
     .sidebar li a, .sidebar li a:hover {
         padding: 0 0 0 40px;
         display: block;
-        background: transparent url(link.png) no-repeat left center;
+        background: transparent url(img/link.png) no-repeat left center;
     }
 
     .sidebar li a.selected {
@@ -231,7 +231,7 @@
 
     #content ul li {
         list-style-type: none;
-        background: url(bullet.png) no-repeat;
+        background: url(img/bullet.png) no-repeat;
         margin: 0 0 6px 0;
         padding: 0 0 4px 25px;
         line-height: 1.5em;
